// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bud.splitChunks sets default options when called 1`] = `
Object {
  "automaticNameDelimiter": "/",
  "cacheGroups": Object {
    "vendor": Object {
      "filename": "js/bundle/vendor/[name].js",
      "idHint": "vendor",
      "priority": -20,
      "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
    },
  },
  "chunks": "all",
  "minSize": 0,
}
`;

exports[`bud.splitChunks sets options when passed as parameters 1`] = `
Object {
  "cacheGroups": Object {
    "chunks": "all",
  },
}
`;
